prometheus/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-monitoring
  labels:
    purpose: cluster-monitoring
