prometheus/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prometheus-node-exporter
  namespace: cluster-monitoring
  labels:
    app: prometheus-node-exporter
    monitoring: cluster
    env: production
spec:
  revisionHistoryLimit: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: prometheus-node-exporter
      env: production
  template:
    metadata:
      labels:
        app: prometheus-node-exporter
        env: production
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
    spec:
      automountServiceAccountToken: false
      containers:
      - name: prometheus-node-exporter
        image: prom/node-exporter:v0.17.0
        args:
        - "--path.procfs=/host/proc"
        - "--path.sysfs=/host/sys"
        - "--web.listen-address=:9100"
        - "--web.telemetry-path=/metrics"
        - "--log.format=logger:stdout?json=true"
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: metrics
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 64Mi
        volumeMounts:
        - name: proc
          mountPath: /host/proc
          readOnly: true
        - name: sys
          mountPath: /host/sys
          readOnly: true
      hostNetwork: true
      hostPID: true
      securityContext:
        runAsUser: 65534
        fsGroup: 65534
      tolerations:
      - operator: Exists
      volumes:
      - name: proc
        hostPath:
          path: /proc
          type: ""
      - name: sys
        hostPath:
          path: /sys
          type: ""
