prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: cluster-monitoring
  labels:
    app: prometheus-server
    monitoring: cluster
    env: production
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "2"
    alb.ingress.kubernetes.io/healthcheck-path: "/-/healthy"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-server
    monitoring: cluster
    env: production
